css/app.css
.uppercase {
  text-transform: uppercase;
}
body {
  margin: 0;
  font-family: "Work Sans", sans-serif;
}
body.teal-blue {
  background-color: #7dc2c0;
}

body.light-gray {
  background-color: rgb(240, 240, 240);
}

header {
  background-color: white;
  padding: 20px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

#logo {
  width: 160px;
  padding-left: 20px;
}
nav {
  display: flex;
  flex-direction: row;
  padding-right: 20px;
}
.primary ul {
  margin-top: 0;
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-bottom: 0;
  padding: 0 20px;
}

li {
  list-style-type: none;
  padding: 0 10px;
  font-size: 12px;
}

.primary li a {
  color: #566175;
}
li a:hover {
  color: #e9753d;
}
li a:active {
  color: #934425;
}

button {
  font-family: "Work Sans", sans-serif;
}

a {
  text-decoration: none;
}

#orange {
  border: 2px solid #e9753d;
  border-radius: 20px;
  padding: 10px;
  background-color: transparent;
  color: #e9753d;
}

#orange:hover {
  background-color: #e9753d;
  color: white;
}

#orange:active {
  background-color: #934425;
  border: 2px solid #934425;
}
main {
  display: flex;
  height: calc(100vh - 98px);
}
.log-in {
  background-color: white;
  width: 325px;
  height: 465px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 20px;
}

h1 {
  text-align: center;
  font-weight: 600;
  color: #484c60;
}

h2 {
  text-align: center;
  font-size: 12px;
  font-weight: 400;
  margin: 4px;
  color: #566175;
}

h2 a {
  color: #e9753d;
}

h2 a:hover {
  color: #934425;
}

h2 a:active {
  color: #566175;
}

#section2 {
  display: flex;
  flex-direction: column;
}

#section2 a {
  font-size: 10px;
  text-align: right;
  color: #566175;
}
form {
  width: 100%;
  margin-top: 25px;
}

input {
  padding: 5px;
  margin: 10px 0;
  border: none;
  border-bottom: 1px solid #bac1cc;
}

#remember-me {
  display: flex;
  flex-direction: row;
  align-items: center;
}

#remember-me label {
  font-size: 10px;
  color: #566175;
  padding-left: 8px;
}

#section3 {
  display: flex;
  flex-direction: column;
  width: 100%;
}

#section3 button {
  padding: 15px;
  margin: 5px;
  border-radius: 4px;
  color: white;
  border: none;
  font-size: 12px;
}

#dark-blue {
  background-color: #484c60;
}

#dark-blue:hover {
  background-color: #262a3b;
}

#light-blue {
  background-color: #4787c1;
}

#light-blue:hover {
  background-color: #2a5985;
}

#green {
  background-color: #36a94d;
}

#green:hover {
  background-color: #218034;
}

/* Start additional CSS for app.html */
.app-body {
  display: flex;
  justify-content: space-between;
  border-top: 1px solid rgb(184, 184, 184);
}
.secondary {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 200px;
  background-color: slategrey;
  padding-right: 0;
}

.secondary ul {
  display: flex;
  flex-direction: column;
  padding-left: 20px;
}

.secondary li {
  padding: 5px 0;
}

.secondary a {
  color: white;
  font-size: 14px;
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (max-width: 768px) {
  header {
    flex-direction: column;
    align-items: flex-start;
  }

  nav {
    flex-direction: column;
  }

  .primary ul {
    flex-direction: column;
    align-items: flex-start;
    margin: 10px 0;
  }

  li {
    padding-left: 0;
    margin: 5px 0;
  }
  #orange {
    margin-left: 20px;
  }
  .secondary {
    width: 100%;
    padding: 20px;
    height: 130px;
  }
  .secondary ul {
    margin: 0;
  }
  .secondary li {
    margin: 0;
  }
  .secondary a:hover {
    color: #e9753d;
  }
  .secondary a:active {
    color: #934425;
  }
}

